[package]
name = "heap-array"
version = "0.1.3"
edition = "2021"
authors = ["NightMare-Vortex"]
description = "An Implementation of a variable length array, with its main benefit over `Vec` is taking up less space"
license = "MIT"
repository = "https://github.com/NightMare-Vortex/heap-array"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]
simd-json =["dep:simd-json-derive", "dep:simd-json"]

[dependencies]
serde = { version="1", optional = true, default-features = false, features=["alloc"] }
simd-json-derive = { version="0.10.1", optional = true }
simd-json = { version="0.10.6", optional = true }
likely_stable = "0.1.2"
